css/graph.css
#graphView
{
    z-index:  0;
    overflow: hidden;
}


.node
{
    display:       block;
    position:      absolute;
    width:         100px;
    /* height:        auto; */
    border-radius: 4px 4px 0 0;
    padding:       0;
}


.nodeInner
{
    display:       block;
    position:      relative;
    width:         100px;
    /* height:        auto; */
    overflow:      hidden;
    border-radius: 4px 4px 0 0;
    padding:       0;
    box-shadow:    0px 5px 20px #0001;
}    


.nodeHeader
{
    background:    #BEDFFF;
    display:       flex;
    width:         100%;
    position:      relative;
    border-radius: 4px 4px 0 0;
}


.nodeLabel
{
    font-family:    Inter;
    font-size:      11;
    padding:        0;
    margin:         0;
    display:        inline-block;
    height:         14;
    color:          black;
    text-align:     center;
    position:       absolute;
    left:           50%;
    top:            50%;
    transform:      translateX(-50%) translateY(-50%);
    pointer-events: auto;
}


.nodeLabelTextbox
{
    font-family: Inter;
    font-size:   11;
}


.inputControls
{
    width:          20px;
    height:         25px;
    float:          left;
    margin-right:   auto;
    pointer-events: none;
}


.outputControls
{
    width:          20px;
    height:         25px;
    float:          right;
    margin-left:    auto;
    pointer-events: none;
}


.input
{
    width:          10px;
    height:         10px;
    background:     white;
    border-radius:  5px;
    margin:         0;
    position:       absolute;
    top:            50%;
    transform:      translateY(-50%);
    left:           3px;
    pointer-events: auto;
    box-shadow:     0 0 0 1px rgba(0, 0, 0, 0.12);
}


.output
{
    width:          10px;
    height:         10px;
    background:     white;
    border-radius:  5px;
    margin:         0;
    position:       absolute;
    top:            50%;
    transform:      translateY(-50%);
    right:          3px;
    pointer-events: auto;
    box-shadow:     0 0 0 1px rgba(0, 0, 0, 0.12);
}


#selectBox
{
    outline:          1pt solid #18A0FB;
    background-color: #18A0FB20;
    pointer-events:   none;
    margin:           0;
    padding:          0;
    position:         absolute;
    visibility:       hidden;
}


#scrollbarX
{
    background-color: #969696;
    height:           6px;
    border-radius:    3px;
    position:         absolute;
    display:          none;
    box-shadow:       0 0 0 1px rgba(255, 255, 255, 0.25);
}


#scrollbarY
{
    background-color: #969696;
    width:            6px;
    border-radius:    3px;
    position:         absolute;
    display:          none;
    box-shadow:       0 0 0 1px rgba(255, 255, 255, 0.25);
}

